fix: use shared classloader and properly use classpath when compiling